kubernetes/apps/minecraft/create/app/ingressroutetcp.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/ingressroutetcp_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: &app minecraft-create
spec:
  entryPoints:
    - minecraft-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: *app
          port: 25565
